<resources>
    <string name="app_name">Movie Catalogue</string>

    <string name="title_storyline">Storyline</string>
    <string name="title_movie">Movie</string>
    <string name="title_tv_show">TV Show</string>

    <string name="contoh_desc">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="contoh_judul">COBA AJAA</string>
    <string name="contoh_genre">Comedy</string>
    <string name="contoh_tanggal">friday, Jun 29, 2017</string>
    <string name="contoh_rate">7.5</string>

    <string-array name="movie_name">
        <item>A Star Is Born</item>
        <item>Glass</item>
        <item>Bird Box</item>
        <item>Aquaman</item>
        <item>Avengers: Infinity War</item>
        <item>Bohemian Rhapsody</item>
        <item>Bumblebee</item>
        <item>Venom</item>
        <item>Mortal Engines</item>
        <item>Once Upon a Deadpool</item>
    </string-array>

    <string-array name="tvshow_name">
        <item>Arrow</item>
        <item>Fairy Tail</item>
        <item>Family Guy</item>
        <item>The Flash</item>
        <item>Game of Thrones</item>
        <item>Naruto Shippuden</item>
        <item>Riverdale</item>
        <item>Supergirl</item>
        <item>The Simpsons</item>
        <item>The Walking Dead</item>
    </string-array>

    <array name="movie_photo">
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_deadpool</item>
    </array>

    <array name="tvshow_photo">
        <item>@drawable/poster_arrow</item>
        <item>@drawable/poster_fairytail</item>
        <item>@drawable/poster_family_guy</item>
        <item>@drawable/poster_flash</item>
        <item>@drawable/poster_god</item>
        <item>@drawable/poster_naruto_shipudden</item>
        <item>@drawable/poster_riverdale</item>
        <item>@drawable/poster_supergirl</item>
        <item>@drawable/poster_the_simpson</item>
        <item>@drawable/poster_the_walking_dead</item>
    </array>

    <string-array name="movie_desc">
        <item>Seasoned musician Jackson Maine discovers — and falls in love with — struggling artist Ally. She has just about given up on her dream to make it big as a singer — until Jack coaxes her into the spotlight. But even as Ally\'s career takes off, the personal side of their relationship is breaking down, as Jack fights an ongoing battle with his own internal demons.</item>
        <item>In a series of escalating encounters, former security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities. Meanwhile, the shadowy presence of Elijah Price emerges as an orchestrator who holds secrets critical to both men.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orm\'s half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock \'n\' roll band Queen in 1970. Hit songs become instant classics. When Mercury\'s increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Many thousands of years in the future, Earth’s cities roam the globe on huge wheels, devouring each other in a struggle for ever diminishing resources. On one of these massive traction cities, the old London, Tom Natsworthy has an unexpected encounter with a mysterious young woman from the wastelands who will change the course of his life forever.</item>
        <item><![CDATA[A kidnapped Fred Savage is forced to endure Deadpool\'s PG-13 rendition of Deadpool 2 as a Princess Bride-esque story that\'s full of magic, wonder & zero F\'s.]]></item>
    </string-array>

    <string-array name="tvshow_desc">
        <item>Spoiled billionaire playboy Oliver Queen is missing and presumed dead when his yacht is lost at sea. He returns five years later a changed man, determined to clean up the city as a hooded vigilante armed with a bow.</item>
        <item>Lucy is a 17-year-old girl, who wants to be a full-fledged mage. One day when visiting Harujion Town, she meets Natsu, a young man who gets sick easily by any type of transportation. But Natsu isn\'t just any ordinary kid, he\'s a member of one of the world\'s most infamous mage guilds: Fairy Tail.</item>
        <item>Sick, twisted, politically incorrect and Freakin\' Sweet animated series featuring the adventures of the dysfunctional Griffin family. Bumbling Peter and long-suffering Lois have three kids. Stewie (a brilliant but sadistic baby bent on killing his mother and taking over the world), Meg (the oldest, and is the most unpopular girl in town) and Chris (the middle kid, he\'s not very bright but has a passion for movies). The final member of the family is Brian - a talking dog and much more than a pet, he keeps Stewie in check whilst sipping Martinis and sorting through his own life issues.</item>
        <item>After a particle accelerator causes a freak storm, CSI Investigator Barry Allen is struck by lightning and falls into a coma. Months later he awakens with the power of super speed, granting him the ability to move through Central City like an unseen guardian angel. Though initially excited by his newfound powers, Barry is shocked to discover he is not the only meta-human who was created in the wake of the accelerator explosion — and not everyone is using their new powers for good. Barry partners with S.T.A.R. Labs and dedicates his life to protect the innocent. For now, only a few close friends and associates know that Barry is literally the fastest man alive, but it won\'t be long before the world learns what Barry Allen has become…The Flash.</item>
        <item>Seven noble families fight for control of the mythical land of Westeros. Friction between the houses leads to full-scale war. All while a very ancient evil awakens in the farthest north. Amidst the war, a neglected military order of misfits, the Night\'s Watch, is all that stands between the realms of men and icy horrors beyond.</item>
        <item>Naruto Shippuuden is the continuation of the original animated TV series Naruto.The story revolves around an older and slightly more matured Uzumaki Naruto and his quest to save his friend Uchiha Sasuke from the grips of the snake-like Shinobi, Orochimaru. After 2 and a half years Naruto finally returns to his village of Konoha, and sets about putting his ambitions to work, though it will not be easy, as He has amassed a few (more dangerous) enemies, in the likes of the shinobi organization; Akatsuki.</item>
        <item>Set in the present, the series offers a bold, subversive take on Archie, Betty, Veronica and their friends, exploring the surreality of small-town life, the darkness and weirdness bubbling beneath Riverdale’s wholesome facade.</item>
        <item>Twenty-four-year-old Kara Zor-El, who was taken in by the Danvers family when she was 13 after being sent away from Krypton, must learn to embrace her powers after previously hiding them. The Danvers teach her to be careful with her powers, until she has to reveal them during an unexpected disaster, setting her on her journey of heroism.</item>
        <item>Set in Springfield, the average American town, the show focuses on the antics and everyday adventures of the Simpson family; Homer, Marge, Bart, Lisa and Maggie, as well as a virtual cast of thousands. Since the beginning, the series has been a pop culture icon, attracting hundreds of celebrities to guest star. The show has also made name for itself in its fearless satirical take on politics, media and American life in general.</item>
        <item>Sheriff\'s deputy Rick Grimes awakens from a coma to find a post-apocalyptic world dominated by flesh-eating zombies. He sets out to find his family and encounters many other survivors along the way.</item>
    </string-array>

    <string-array name="movie_date">
        <item>October 5, 2018</item>
        <item>January 18, 2019</item>
        <item>November 12, 2018</item>
        <item>December 21, 2018</item>
        <item>April 23, 2018</item>
        <item>October 30, 2018</item>
        <item>December 21, 2018</item>
        <item>October 1, 2018</item>
        <item>December 14, 2018</item>
        <item>December 11, 2018</item>
    </string-array>

    <string-array name="tvshow_date">
        <item>October 10, 2012</item>
        <item>October 12, 2009</item>
        <item>January 31, 1999</item>
        <item>October 7, 2014</item>
        <item>April 17, 2011</item>
        <item>February 15, 2007</item>
        <item>January 26, 2017</item>
        <item>October 26, 2015</item>
        <item>December 17, 1989</item>
        <item>October 31, 2010</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="txt_error_state">No movies were found</string>
    <string name="txt_nodesc">No description</string>
    <string name="btn_try_again">try again</string>

</resources>
